demo-ui/public/stylesheets/ons.css
/* ... */
.ls-approved{
    color:white;
    background-color:#00CC00;
    font-size:0.9em;
    white-space: nowrap;
}
.ls-provisional{
    color:white;
    background-color:#FFCC00;
    font-size:0.9em;
    white-space: nowrap;
}
.ls-historical{
    color:white;
    background-color:#FF0000;
    font-size:0.9em;
    white-space: nowrap;
}

.debug-query-output{
    max-width: 800px;
    margin-left: 10px;
    padding: 10px;
}

details{
    min-width: 900px;
}

details details summary{
    margin-left: 17px;
}

details details div{
    text-indent: 53px;
}

#multi-match-results{
    padding-left: 10px
}

.inputfile-box {
    position: relative;
    margin-left: 10px;
}

.inputfile {
    display: none;
}

.container {
    display: inline-block;
    width: 100%;
}

.file-box {
    -webkit-border-radius: 0 6px 6px 0;
    -moz-border-radius: 0 6px 6px 0;
    border-radius: 0 6px 6px 0;
    display: inline-block;
    width: 100%;
    border: 1px #ccc3cc solid;
    padding-left: 5px;
    color: #474547;
    box-sizing: border-box;
    height: 23px;
}

.upload-btn {
    -webkit-border-radius: 0 6px 6px 0;
    -moz-border-radius: 0 6px 6px 0;
    border-radius: 0 6px 6px 0;
    font-family: Arial;
    color: #474547;
    font-size: 13px;
    background: #f5f5f5;
    padding: 1px 30px 1px 30px;
    border: solid #b5acb5 1px;
    text-decoration: none;
    cursor: pointer;
    position: absolute;
    top: 0px;
    right: 0px;
}

.upload-btn:hover {
    background: #e0e0e0;
    text-decoration: none;
}
button.no-margin{
    margin-left: 0;
}

#search-button{
    margin-top: 10px;
}

.search-button.disabled{
    opacity: 0.3;
}

#feedback{
    position: absolute;
    right: 0;
    margin-top: 5px;
    margin-right: 13px;
    color: #489DC4;
}

#feedback a:visited{
    color: #489DC4;
}
#feedback a:link{
    color: #489DC4;
}
#match-count a{
    margin-left: 7px;
}

#loginbox label {
    margin-left:10px;
}
.address-toggle-welsh {
    border: 1px solid #489DC4;
    display: inline-block;
    padding: 3px 15px;
    color: #489DC4;
    cursor: pointer;
}
a.address-toggle-welsh:hover {
    color: #489DC4;
    cursor: pointer;
}

.help-container {
    width: 600px;
    margin: 10px auto
}

.help-container img {
    display: block;
    border: 1px solid #ddd;
    margin: 20px 0;
}

.help-container ol {
    list-style: decimal;
}

.help-container ul {
    list-style: none;
}

.help-container h1 {
    margin-top: 70px;
}

